--- a/src/containers/TopicsScreen.css
+++ b/src/containers/TopicsScreen.css
@@ -1,5 +1,7 @@
 .TopicsScreen {
   padding: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 .TopicsScreen ul {
@@ -8,6 +10,9 @@
   width: 640px;
   margin: auto;
   border: 1px solid #aaa;
+  max-height: calc(100vh - 110px);
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .TopicsScreen li {
@@ -30,16 +35,15 @@
   margin: 0;
 }
 
-  
-  .NextScreen {
-    position: fixed;
-    top: 50%;
-    right: calc((100vw - 640px)/2 - 90px);
-    background: url('../img/right_arrow.png');
-    background-size: 80px 80px;
-    width: 80px;
-    height: 80px;
-    border: 0;
-    cursor: pointer;
-    outline: none;
-  }
+.NextScreen {
+  position: fixed;
+  top: 50%;
+  right: calc((100vw - 640px)/2 - 90px);
+  background: url('../img/right_arrow.png');
+  background-size: 80px 80px;
+  width: 80px;
+  height: 80px;
+  border: 0;
+  cursor: pointer;
+  outline: none;
+}
